# OEIS-A258107-calculator

./: CMakeLists.txt  LICENSE  README.md
scr/: Application.cpp  Application.hpp  BigInteger.cpp  main.cpp
